[tool.poetry]
name = "MyoRatio-API"
version = "3.4.1"
description = "API for the MyoRatio Application"
authors = ["Florentin Thullier <fthullie@uqac.ca>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{ include = "myoratio" }]

[tool.poetry.scripts]
serve = "myoratio:run"

[tool.poe.tasks]
secret = {shell = "python secret.py"}
make-win = "pyinstaller --collect-all charset_normalizer --add-data \".env:.\" --console --clean --name MyoRatioAPI \"--icon=assets\\icons\\win\\app.ico\" server.py --noconfirm"
build-win = ["secret", "make-win"]
make-mac = "pyinstaller --collect-all charset_normalizer --add-data \".env:.\" --console --clean --name MyoRatioAPI \"--icon=assets\\icons\\mac\\app.icns\" server.py --noconfirm"
build-mac = ["secret", "make-mac"]
lint = {shell = "black . && flake8 && isort --profile black ."}
commit = "cz commit"
release = {shell = "standard-version"}
publish = {shell = "git push --follow-tags origin main"}

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "^3.0.0"
pandas = "^2.1.2"
simple-schema-validator = "^0.0.9"
flask-httpauth = "^4.8.0"
bcrypt = "^4.0.1"
matplotlib = "^3.8.1"
scipy = "^1.11.3"
dask = "^2023.11.0"
openpyxl = "^3.1.2"
environs = "^9.5.0"
gevent = "^23.9.1"
pathvalidate = "^3.2.0"
xlsxwriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pyinstaller = "^6.1.0"
isort = "^5.12.0"
commitizen = "^3.5.2"
pre-commit = "^3.3.3"
toml = "^0.10.2"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
